Feature, Stories, Homes and Gallery  sections ccomplete

--- a/3-Nexter/doc/01.Intro to CSS Grids.md
+++ b/3-Nexter/doc/01.Intro to CSS Grids.md
@@ -1,6 +1,6 @@
 * every 2 hour content i can finish in 10hrs with taking  notes and practicing/coding along
 
-##Topic 2 - why Css is whole new mindset
+## Topic 2 - why Css is whole new mindset
 
 css Grid layout = Two dimensional grid system 
 Css Grid replaces float layouts
@@ -34,7 +34,7 @@ grid-gap:30px; set both vertical and hirzantal with same space amount
 - grid-column-rows =  repeat(2, 150px) 1fr; instead of 150px 150px ramining-space;  
 
 
-##Topic 6 - postion Css grid using grid-row and grid-column
+## Topic 6 - postion Css grid using grid-row and grid-column
 
 grid-row-start: 2; = start from second row
 grid-row-end: 3; = end at third row
@@ -188,8 +188,9 @@ grid-template-rows: reapeat(2, minmax(150px, min-content));
 grid-template-columns:  minmax(200px, 300px); = no matter what, content  will be b/w 200px and 300px
 
 
-##Topic - 16 Auto fill and Auto-fitt
-codepen.io/jonasschemedtmann/cssgrid intro - part 4
+## Topic - 16 Auto fill and Auto-fitt
+
+- codepen.io/jonasschemedtmann/cssgrid intro - part 4
 
 -container{width:1000px}
 -grid-tempalate-columns:repeat(auto-fill, 100px);
