build the heading and hero section, project desktop version complete

--- a/3-Nexter/doc/02. Nexter project.md
+++ b/3-Nexter/doc/02. Nexter project.md
@@ -102,3 +102,13 @@ align-items  = aligns the content
 
 - grid-column: 3 / span 3;
 - span 3 = stands for stretch/add 3 column or row, so start from 3 until end of 5 thats 3 columns
+
+## Topic 14&15 - Building the header
+
+- manage vertical spacing with grid
+- using ::after and before pseduos as grid items
+
+- numbers we put in the grid-template properties are stand for row/or colum 
+- grid-temlate-rows: 1strow 2ndrow 3rdrow 4throw etc..;
+
+
