media qeuries and production build process - Nexter Project end

--- a/3-Nexter/doc/02. Nexter project.md
+++ b/3-Nexter/doc/02. Nexter project.md
@@ -112,3 +112,108 @@ align-items  = aligns the content
 - grid-temlate-rows: 1strow 2ndrow 3rdrow 4throw etc..;
 
 
+- before media queries we re-set the grid images responsiveness
+
+## Topic 17&18 - Media queries and responsive
+
+### sidebar.scss - @media only screen and(max-width:$bp-large)
+
+* base.scss
+- in our base.scss remove sidebar column and add as row  to grid-template-rows: layout
+
+- grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+
+* sidebar.scss
+
+- sidebar{
+    grid-column: 1 / -1; 
+        grid-row: 1 / 2;  
+        justify-content: flex-end;
+        align-items: center;
+}
+
+- nav-btn{
+    margin-top: 0;
+    margin-right: 4rem;
+}
+
+### header.scss
+
+- header{ grid-template-columns: max-content < minmax(min-content, max-content); grid-template-rows: 1fr min-content 6rem 1fr; < 1fr min-content minmax(6rem, min-content) 1fr;
+}
+- img {= height < max-height}
+
+- Media queries
+- html{
+    @media only screen and(max-width:$bp-largest){
+        font-size: 50%; //1rem = 8px
+    }
+}
+
+### base.scss and sidebar.scss
+
+
+
+
+
+## realtors.scss
+
+- @media only screen and(max-width:$bp-medium){
+            grid-template-columns: repeat(3, min-content max-content);
+    }
+
+- we display 3 columns, and for each one it fits a pair of(image and text) with the minimum space thye need. so they will be side-by-side
+        
+    @media only screen and(max-width:$bp-small){
+        grid-template-columns: min-content max-content;
+    }
+
+- we display 1 column for each pair of(image and text) to fill the minimum space thye need. and now hey will be on top of each otehr
+
+- grid-template-columns: min-content max-content; min-conntent is for image, and max-content for text
+
+## base.scss bp-medium
+
+- grid-template-rows: 6rem calc(100vh - 6rem) min-content min-content min-content repeat(3, min-content);
+- it's the same as if we specify as min-content or dont specify at all because the automatic placement algorith will take care the rows we dont specify, so we end up with
+- grid-template-rows: 6rem calc(100vh - 6rem);
+
+
+“It is no measure of health to be well adjusted to a profoundly sick society.”
+
+## Topic 19. Browser Support for CSS Grid
+
+- progressive enhancement : we pretend that browser dont support css grid so we use conditional checking with @supports. we will have a lot of code 
+
+- example in features.scss
+
+- .features{
+	@supports(display:grid){
+        display: grid;
+        // grid-template-columns: repeat(3, 1fr); // un-responsive
+        grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+        gap: 30px;
+        align-items: start;
+}
+
+- .feature{
+    float: left;
+    width: 33.33333%;
+    margin-bottom: 6rem;
+
+    @supports(display:grid){
+        width: auto;
+        margin-bottom: 0;
+    }
+}
+
+## Topic 20 - Wrapping up the Nexter Project Final Considerations
+
+- bild process
+- shorthand for grid-template-rows and grid-templatecolumns:
+
+- grid-template: rows/columns
+
+
+- would be cool if css grid have seclecotrs for nth,even,odd.
+- css grid subgrid woul released late 2018. so lookout for.
