--- a/3-Nexter/doc/01.Intro to CSS Grids.md
+++ b/3-Nexter/doc/01.Intro to CSS Grids.md
@@ -1,4 +1,6 @@
-* every 2 hour content i can finish in 10hrs with taking  notes and practicing/coding along
+* every 2 hour content i can finish in 10hrs with taking  notes and coding along
+
+- important topics from 12 to 16
 
 ## Topic 2 - why Css is whole new mindset
 
@@ -174,30 +176,38 @@ align/content/items = column/vertical
 justify/content/items = row/horizantal
 
 * adding 'dense' to grid-auto-flow: row dense;
-it will shuffle to fill the wholes/empty spaces of the grid with the remaining content
+- it will shuffle to fill the wholes/empty spaces of the grid with the remaining content
 
 
 
 ## Topic 15 - using min-content, max-content and the minmax()
 
-max-content = maximum space to fit the content. exapand as the content increase
-min-content = minum space to fit the content. shrink as the content increase
-minmax() = takes two values and makes sure the content stays b/w this two values
+- max-content = takes maximum space needed to fit the content. exapand as the content increase
+- min-content = takes minum space needed to fit the content, meaning shrink the box as the content decreases, but never squash/ovelap the content if there is no more space for it. minimun space needed .
+- i think they need width to be specified for the container appleid to min-content or max-content.
 
-grid-template-rows: reapeat(2, minmax(150px, min-content));
-grid-template-columns:  minmax(200px, 300px); = no matter what, content  will be b/w 200px and 300px
+- min-content and max-contetn are set to width property
+- for text pov = min-content is equal to lenght of longest word; meaning it will shrink  to fit the width of longest word, no matter the space it has to parent.
+- max-content it expands if ther is space for it
+
+- minmax() = takes two values and makes sure the content stays b/w this two values
+
+- minmax are mostly set on grid-template-columns and the rows are not specified, but it can bes used on both.
+- grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+- grid-template-rows: reapeat(2, minmax(150px, min-content));
+- grid-template-columns:  minmax(200px, 300px); = no matter what, content  will be b/w 200px and 300px
 
 
 ## Topic - 16 Auto fill and Auto-fitt
 
 - codepen.io/jonasschemedtmann/cssgrid intro - part 4
 
--container{width:1000px}
--grid-tempalate-columns:repeat(auto-fill, 100px);
-- auto-fill = creates as many tracks as posible by dividing the width of the container
-to the width we specify. so if container is 1000px, then 1000/100 = 10 tracks
+- container{width:1000px}
+- grid-tempalate-columns:repeat(auto-fill, 100px);
 
-- auto-fit = creates as many tracks as posible but it collapses the empty ones
- while auto-fill dont  collpase
+* auto-fill = creates as many tracks as posible by dividing the width of the container to the width we specify. so if container is 1000px, then 1000/100 = 10 tracks
+
+* auto-fit = creates as many tracks as posible but it collapses the empty ones while auto-fill dont  collpase
 
 - auto-fit and minmax() together is helpfull for responsive layout for columns
